<resources>
    <string name="app_name">Manoglani Pareeksha</string>
    <string name="prompt_username">Enter Username</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_name">Enter Name</string>
    <string name="prompt_dob">Enter Date Of Birth</string>
    <string name="prompt_age">Enter Age</string>
    <string name="prompt_gender">Enter Gender</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_phone">Enter Phone No</string>
    <string name="prompt_doctor">Enter Consulting Doctor</string>
    <string name="prompt_medical_history">Enter Medical History</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="register">Register</string>
    <string name="nameLabel">Name</string>
    <string name="dobLabel">DOB</string>
    <string name="ageLabel">Age</string>
    <string name="genderLabel">Gender</string>
    <string name="phoneLabel">Phone</string>
    <string name="emailLabel">Email</string>
    <string name="doctorLabel">Doctor</string>
    <string name="medicalHistoryLabel">Medical History</string>
    <string name="start">Start</string>
    <string name="q1">Q1) Little interest or pleasure in doing things?</string>
    <string name="q2">Q2) Feeling down, depressed, or hopeless?</string>
    <string name="q3">Q3) Trouble falling or staying asleep, or sleeping too much?</string>
    <string name="q4">Q4) Feeling tired or having little energy?</string>
    <string name="q5">Q5) Poor appetite or overeating?</string>
    <string name="q6">Q6) Feeling bad about yourself — or that you are a failure or have let yourself or your family down?</string>
    <string name="q7">Q7) Trouble concentrating on things, such as reading the newspaper or watching television?</string>
    <string name="q8">Q8) Moving or speaking so slowly that other people could have noticed? Or so fidgety or restless that you have been moving a lot more than usual?</string>
    <string name="q9">Q9) Thoughts that you would be better off dead, or thoughts of hurting yourself in some way?</string>
    <string name="o0">0</string>
    <string name="o1">1</string>
    <string name="o2">2</string>
    <string name="o3">3</string>
    <string name="enter_details">Enter Details</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patient_details">Patient Details</string>
</resources>
