<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="294sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="58sp"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="285sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLabel"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50sp"
        android:layout_marginTop="15sp"
        android:textColor="@color/logo_blue"
        android:layout_marginEnd="58sp"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="75sp"
        android:layout_marginTop="191sp"
        android:layout_marginEnd="108sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128sp"
        android:layout_marginTop="42sp"
        android:text="LOGIN"
        android:textColor="@color/logo_blue"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50sp"
        android:layout_marginTop="151sp"
        android:textColor="@color/logo_blue"
        android:text="@string/username"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:textColor="@color/logo_blue"
        android:layout_marginStart="50sp"
        android:layout_marginTop="40sp"
        android:text="@string/password"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="35dp"
        android:background="@color/logo_blue"
        android:text="LOGIN"
        android:textColor="@color/logo_white" />

</RelativeLayout>